--- a/app/src/main/res/layout/activity_split_bill.xml
+++ b/app/src/main/res/layout/activity_split_bill.xml
@@ -3,6 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity"
+    tools:context=".view.SplitBillActivity"
     android:id="@+id/personsLv"/>
-
