--- a/app/src/main/res/menu/context_menu_main.xml
+++ b/app/src/main/res/menu/context_menu_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/removeContactMi"
-        android:title="@string/remove_contact"/>
+        android:id="@+id/removePersonMi"
+        android:title="Remover Pessoa" />
     <item
-        android:id="@+id/editContactMi"
-        android:title="@string/edit_contact"/>
+        android:id="@+id/editPersonMi"
+        android:title="Editar Pessoa" />
 </menu>
